# blackbox-adversarial-toolbox

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  make.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: pdoc.yaml  pdoc.yml
bat/: __init__.py  _main.py
bat/apis/: __init__.py  deepapi.py  google.py  imagga.py
bat/apis/deepapi/: __init__.py  vgg16_cifar10.py
bat/attacks/: __init__.py  bandits_attack.py  base_attack.py  simba.py  simba_attack.py  square_attack.py
bat/examples/: __init__.py  bandits_attack_deepapi.py  simba_attack_deepapi.py  square_attack_deepapi.py
bat/utils/: __init__.py  logger.py  proj_lp.py
docs/: CNAME  index.html  search.js
docs/bat/: apis.html  attacks.html
docs/bat/apis/: deepapi.html
docs/bat/apis/deepapi/: vgg16_cifar10.html
docs/bat/attacks/: simba.html
docs/v0.0.6/: bat.html  index.html  search.js
docs/v0.0.6/bat/: apis.html  attacks.html  utils.html
docs/v0.0.6/bat/apis/: deepapi.html
docs/v0.0.6/bat/attacks/: simba.html
docs/v0.0.6/bat/utils/: proj_lp.html
docs/v0.0.7/: bat.html  index.html
docs/v0.0.7/bat/: apis.html  attacks.html  utils.html
docs/v0.0.7/bat/apis/: deepapi.html
docs/v0.0.8/: bat.html  search.js
docs/v0.0.8/bat/: apis.html  attacks.html  utils.html
examples/: deepapi_simba.py  deepapi_simba_attack.py  deepapi_simba_dist.py
notebooks/: bandits_attack_deepapi.ipynb  simba_attack_deepapi.ipynb  simba_deepapi_example.ipynb  simple_ba_example.ipynb  square_attack_deepapi.ipynb
tests/: test_deepapi.py  test_simba.py  test_square.py
(+8 files in other folders)
